--- a/templates/resource-ip-pool.xml
+++ b/templates/resource-ip-pool.xml
@@ -2,14 +2,19 @@
   <resource-pools xmlns="http://tail-f.com/pkg/resource-allocator">
   <ip-address-pool xmlns="http://tail-f.com/pkg/ipaddress-allocator">
     <name>{resource-pool/name}</name>
+    <auto-redeploy>true</auto-redeploy>
+    <?foreach {subnet}?>
     <subnet>
-      <address>{subnet/address}</address>
+      <address>{address}</address>
       <cidrmask>{cidrmask}</cidrmask>
     </subnet>
+    <?end?>
+    <?foreach {range}?>
     <range>
-      <from>{range/from}</from>
-      <to>{range/to}</to>
+      <from>{from}</from>
+      <to>{to}</to>
     </range>
+    <?end?>
   </ip-address-pool>
   </resource-pools>
 </config-template>
